# wf_lists_lm_childrenstories

./: .env.example  .gitignore  README.md  common_lib.py  generate_stories.py  generate_titles.py  generate_wf_lists.py  pyproject.toml  requirements.txt
lib/: language_data.py  lm.py  misc.py  text_processing.py
tests/: test_misc.py  test_text_processing.py  test_tokens_from_text.py
typings/MeCab/: __init__.pyi  cli.pyi
typings/jieba/: __init__.pyi  __main__.pyi  _compat.pyi
typings/jieba/analyse/: __init__.pyi  analyzer.pyi  textrank.pyi  tfidf.pyi
typings/jieba/finalseg/: __init__.pyi
typings/jieba/lac_small/: creator.pyi  nets.pyi  predict.pyi  reader_small.pyi  utils.pyi
typings/jieba/posseg/: __init__.pyi  prob_trans.pyi  viterbi.pyi
wf_lists/: wf_list_af.csv  wf_list_am.csv  wf_list_ar.csv  wf_list_be.csv  wf_list_bg.csv  wf_list_bn.csv  wf_list_bo.csv  wf_list_br.csv  wf_list_bs.csv  wf_list_ca.csv  wf_list_ce.csv  wf_list_cs.csv  wf_list_cu.csv  wf_list_cy.csv  wf_list_da.csv  wf_list_de.csv  wf_list_el.csv  wf_list_en.csv  wf_list_eo.csv  wf_list_es.csv  wf_list_et.csv  wf_list_eu.csv  wf_list_fa.csv  wf_list_fi.csv  wf_list_fr.csv  wf_list_fy.csv  wf_list_ga.csv  wf_list_gd.csv  wf_list_gl.csv  wf_list_he.csv  wf_list_hi.csv  wf_list_hr.csv  wf_list_ht.csv  wf_list_hu.csv  wf_list_hy.csv  wf_list_hz.csv  wf_list_id.csv  wf_list_is.csv  wf_list_it.csv  wf_list_ja.csv  (+52 more)
