[project]
name = "LMChildrenStories"
version = "0.1"
requires-python = ">=3.13"
dependencies = [
    "botok>=0.9.0",
    "jieba>=0.42.1",
    "khmer-nltk>=1.6",
    "laonlp>=1.2.0",
    "mecab-python3>=1.0.10",
    "openai>=2.7.1",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.2.1",
    "spacy>=3.8.8",
    "unidic-lite>=1.0.8",
]

[tool.autopep8]
max_line_length = 200


[tool.pyright]
typeCheckingMode="strict"
include = []
exclude = ["stories/", "typings/"]
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnnecessaryIsInstance = false
reportMissingTypeArgument = false
reportImplicitStringConcatenation = true
reportImplicitOverride = true
reportWildcardImportFromLibrary = true
